--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,33 @@ footer ul li a img {}
 }
 .question_truefalse figure { overflow: hidden;border: 3px solid #333;border-radius: 30px; height: 250px; width: 100%; }
 
+/*error message*/
+
+.error_message {
+    border:3px solid #000;
+    border-radius: 20px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: #fff;
+    width: 300px;
+}
+
+.error_message:before {
+    content: '';
+    height: 70px;
+    position: absolute;
+    width: 70px;
+    border: 3px solid #000;
+    background: #fff;
+    border-radius: 100px;
+    top: -39px;
+    left: 50%;
+    margin-left: -35px;
+
+}
+
+
 .btn { border-radius: 20px; border:3px solid #333; color: #35A8E0; text-transform: uppercase; font-size: 16px; letter-spacing: 2px;display: inline-block; line-height: 43px; width: 200px;margin-right: 10px;position: relative;}
 .btn.selected:after {
     
