--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
 #logo { 
 
 	position: absolute;
-	height: 180px;
-	width: 180px;
+	height: 150px;
+	width: 150px;
 	margin: 20px 0 0 30px;
 
 }
@@ -21,7 +21,7 @@ nav ul li a{ float: left;color: #000;font-weight: bold;font-size: 14px;}
 section {display: inline-block; width: 100%; height: 100%}
 .home #home_section { position: absolute;width: 50%;left: 50px; top: 220px; z-index: 3;}
 .home #home_section h1 { font-size: 50px;font-weight: bold; margin-bottom: 20px}
-.home #home_section p { font-size: 20px;font-weight: normal; width: 70%; line-height: 26px;}
+.home #home_section p { font-size: 14px;font-weight: normal; width: 70%; line-height: 23px;}
 .home #home_section a { margin-top:20px;}
 
 .btn_primary { border-radius: 30px; background:#00AEEF; display:inline-block; padding: 10px 70px; color: #fff; font-size: 24px;}
@@ -119,15 +119,7 @@ footer ul li a img {}
 /*Questions*/
 #question_content { margin-bottom: 20px; width: 100%; display: inline-block; position: relative;z-index: 10}
 #question_content .row { margin-bottom: 20px;}
-.question_img { border:3px solid #333;border-radius: 20px;overflow: hidden; background: #fff;
-    -webkit-transition: all 100ms ease-in-out;
-    -webkit-transform: scale(1); 
-    -ms-transition: all 100ms ease-in-out;
-    -ms-transform: scale(1); 
-    -moz-transition: all 100ms ease-in-out;
-    -moz-transform: scale(1);
-    transition: all 100ms ease-in-out;
-    transform: scale(1);
+.question_img { border:3px solid #333;border-radius: 0px;overflow: hidden; background: #fff;
     cursor: pointer;
 }
 .question_img:hover { 
@@ -164,7 +156,7 @@ footer ul li a img {}
   width: 100%;
   height: 100px;
   border:3px solid #333;
-  border-radius: 30px;
+  border-radius: 70px;
   margin: 10px 0;
   background: #fff;
 }
@@ -258,7 +250,7 @@ footer ul li a img {}
 }
 
 
-.btn { border-radius: 20px; border:3px solid #333; color: #35A8E0; text-transform: uppercase; font-size: 16px; letter-spacing: 2px;display: inline-block; line-height: 43px; width: 200px;margin-right: 10px;position: relative;}
+.btn { border-radius: 40px; border:3px solid #333; color: #35A8E0; text-transform: uppercase; font-size: 16px; letter-spacing: 2px;display: inline-block; line-height: 43px; width: 200px;margin-right: 10px;position: relative;}
 .btn.selected:after {
     
   content: ' ';
@@ -303,6 +295,51 @@ footer ul li a img {}
   margin-left: auto;
   margin-right: auto;
   float: none;
+}
+
+
+/*Keyboard*/
+
+.key{
+  width:40px;
+  height: 40px;
+  background-color:black;
+  border-radius: 5px;
+  display:inline-block;
+  margin: 0px;
+  margin-left: -4px;
+  padding: 0;
+}
+
+.key-inner{
+  width:30px;
+  height:30px;
+  background-color: #333;
+  color:white;
+  position:relative;
+  top:2px;
+  left: 4.5px;
+  border-radius: 3px;
+  text-align:center;
+  margin:0;
+  padding:0;
+}
+
+.key span{
+  vertical-align: center;
+  line-height:30px;
+  font-family: sans-serif;
+  margin:0;
+  padding:0;
+}
+
+.keyboard-row{
+  margin:0;
+  padding:0;
+}
+
+.row-2{
+  margin-left: 24px;
 }
 
 /* KEYFRAMES */
