--- a/css/style.css
+++ b/css/style.css
@@ -300,29 +300,38 @@ footer ul li a img {}
 
 /*Keyboard*/
 
+.typo { display: inline-block; border-bottom:2px solid #000; width: 2%; min-width: 40px; }
+
+#keyboard { 
+   
+   margin:50px 0;
+
+ }
+
 .key{
-  width:40px;
-  height: 40px;
-  background-color:black;
-  border-radius: 5px;
-  display:inline-block;
-  margin: 0px;
-  margin-left: -4px;
-  padding: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 7px;
+    display: inline-block;
+    margin: 3px;
+    border: 2px solid #000;
+    padding: 0;
+    background: #fff;
+    cursor: pointer;
 }
 
 .key-inner{
-  width:30px;
-  height:30px;
-  background-color: #333;
-  color:white;
-  position:relative;
-  top:2px;
-  left: 4.5px;
-  border-radius: 3px;
-  text-align:center;
-  margin:0;
-  padding:0;
+    width: 30px;
+    height: 30px;
+    color: #000;
+    font-weight: bold;
+    position: relative;
+    top: 2px;
+    left: 3.5px;
+    border-radius: 0px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 .key span{
