--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,14 @@ section {display: inline-block; width: 100%; height: 100%}
 .home #home_section p { font-size: 14px;font-weight: normal; width: 70%; line-height: 23px;}
 .home #home_section a { margin-top:20px;}
 
-.btn_primary { border-radius: 30px; background:#00AEEF; display:inline-block; padding: 10px 70px; color: #fff; font-size: 24px;}
+.btn_primary {
+    border-radius: 30px;
+    background: #00AEEF;
+    display: inline-block;
+    padding: 7px 30px;
+    color: #fff;
+    font-size: 20px;
+}
 .btn_secundary {  display:inline-block; padding: 10px 40px; color: #333; font-size: 14px;}
 
 .cloud { background: url(../img/cloud.png) no-repeat; height:21px; width: 92px; position: absolute;
@@ -96,7 +103,6 @@ footer ul li a img {}
     border: 2px solid #00AEEF;
     display: inline-block;
     width: 50%;
-    margin-bottom: 20px;
     text-align: left;
     font-weight: 600;
     border-radius: 6px;
@@ -106,15 +112,314 @@ footer ul li a img {}
 }
 #register_form .input .style-select select { background: none;border: none; width: 100%}
 
+#register_form  .checkbox { font-size: 16px;}
+
 .error_form input { border-color:red !important}
 
 #register_form .btn_secundary { display: inline-block; margin-top: 20px;}
 #register_form .col-md-3 {float: none;margin:30px auto; position: relative;z-index: 3}
+#register_form small { margin: 20px 0; display: inline-block;font-style: italic;}
+
 
 .kid { width: 8%; position: absolute; left: 200px;top: 300px;}
 .girl {width: 8%; position: absolute; right: 200px;top: 300px;}
 
 /*Are you ready*/
+
+
+.demo {
+  position: relative;
+  margin: auto;
+  display: inline-block;
+  width:140px;
+  height: 140px;
+  padding: 10px;
+  border-radius: 20px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+.demo__colored-blocks {
+  overflow: hidden;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 140px;
+  height: 100%;
+  padding: 10px;
+  border-radius: 20px;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+  -webkit-animation: demoAnim 4s ease-in-out infinite, contAnim 4s infinite;
+          animation: demoAnim 4s ease-in-out infinite, contAnim 4s infinite;
+}
+.demo__colored-blocks-rotater {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  -webkit-animation: rotation 1.3s linear infinite;
+          animation: rotation 1.3s linear infinite;
+}
+.demo__colored-blocks-inner {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  background: #fff;
+  border-radius: inherit;
+}
+.demo__colored-block {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 300%;
+  height: 300%;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+}
+.demo__colored-block:nth-child(1) {
+  -webkit-transform: rotate(0deg) skewX(-30deg);
+          transform: rotate(0deg) skewX(-30deg);
+  background-color: #E4087E;
+}
+.demo__colored-block:nth-child(2) {
+  -webkit-transform: rotate(120deg) skewX(-30deg);
+          transform: rotate(120deg) skewX(-30deg);
+  background-color: #F7B132;
+}
+.demo__colored-block:nth-child(3) {
+  -webkit-transform: rotate(240deg) skewX(-30deg);
+          transform: rotate(240deg) skewX(-30deg);
+  background-color: #05AA9E;
+}
+.demo__inner {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 70px;
+}
+.demo__numbers {
+  overflow: visible;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100px;
+  height: 100px;
+  margin-left: -50px;
+  margin-top: -50px;
+}
+.demo__numbers-path {
+  fill: none;
+  stroke-width: 10px;
+  stroke: #000;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 0, 518.05507;
+  stroke-dashoffset: 0;
+  -webkit-animation: numAnim 4s ease-in-out infinite;
+          animation: numAnim 4s ease-in-out infinite;
+  opacity: 0;
+}
+.demo__text {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 140px;
+  height: 100%;
+  margin-left: -250px;
+  text-align: center;
+  line-height: 140px;
+  font-size: 80px;
+  color: #000;
+  -webkit-transform: translateX(10px);
+          transform: translateX(10px);
+  -webkit-animation: hideText 4s infinite;
+          animation: hideText 4s infinite;
+}
+
+@-webkit-keyframes contAnim {
+  15%,
+  100% {
+    width: 140px;
+  }
+  25%,
+  90% {
+    width: 140px;
+  }
+}
+
+@keyframes contAnim {
+  15%,
+  100% {
+    width: 140px;
+  }
+  25%,
+  90% {
+    width: 140px;
+  }
+}
+@-webkit-keyframes numAnim {
+  15% {
+    stroke-dasharray: 0, 518.05507;
+    stroke-dashoffset: 0;
+    opacity: 0;
+  }
+  25%,
+  41% {
+    opacity: 1;
+    stroke-dasharray: 144.42566, 518.05507;
+    stroke-dashoffset: -40;
+  }
+  53%,
+  66% {
+    stroke-dasharray: 136.02162, 518.05507;
+    stroke-dashoffset: -227.2387;
+  }
+  76% {
+    stroke-dasharray: 113.47512, 518.05507;
+    stroke-dashoffset: -445.89957;
+  }
+  88%,
+  100% {
+    stroke-dasharray: 72.15549, 518.05507;
+    stroke-dashoffset: -445.89957;
+  }
+  92% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes numAnim {
+  15% {
+    stroke-dasharray: 0, 518.05507;
+    stroke-dashoffset: 0;
+    opacity: 0;
+  }
+  25%,
+  41% {
+    opacity: 1;
+    stroke-dasharray: 144.42566, 518.05507;
+    stroke-dashoffset: -40;
+  }
+  53%,
+  66% {
+    stroke-dasharray: 136.02162, 518.05507;
+    stroke-dashoffset: -227.2387;
+  }
+  76% {
+    stroke-dasharray: 113.47512, 518.05507;
+    stroke-dashoffset: -445.89957;
+  }
+  88%,
+  100% {
+    stroke-dasharray: 72.15549, 518.05507;
+    stroke-dashoffset: -445.89957;
+  }
+  92% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes rotation {
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotation {
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes demoAnim {
+  15% {
+    border-radius: 20px;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  30%,
+  43% {
+    border-radius: 50%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  52%,
+  65% {
+    border-radius: 0;
+    -webkit-transform: rotate(720deg);
+            transform: rotate(720deg);
+  }
+  78%,
+  90% {
+    border-radius: 50%;
+    -webkit-transform: rotate(1080deg);
+            transform: rotate(1080deg);
+  }
+  100% {
+    border-radius: 20px;
+    -webkit-transform: rotate(1440deg);
+            transform: rotate(1440deg);
+  }
+}
+@keyframes demoAnim {
+  15% {
+    border-radius: 20px;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  30%,
+  43% {
+    border-radius: 50%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  52%,
+  65% {
+    border-radius: 0;
+    -webkit-transform: rotate(720deg);
+            transform: rotate(720deg);
+  }
+  78%,
+  90% {
+    border-radius: 50%;
+    -webkit-transform: rotate(1080deg);
+            transform: rotate(1080deg);
+  }
+  100% {
+    border-radius: 20px;
+    -webkit-transform: rotate(1440deg);
+            transform: rotate(1440deg);
+  }
+}
+@-webkit-keyframes hideText {
+  15%,
+  100% {
+    opacity: 1;
+  }
+  20%,
+  96% {
+    opacity: 0;
+  }
+}
+@keyframes hideText {
+  15%,
+  100% {
+    opacity: 1;
+  }
+  20%,
+  96% {
+    opacity: 0;
+  }
+}
+
+
 
 /*Questions*/
 #question_content { margin-bottom: 20px; width: 100%; display: inline-block; position: relative;z-index: 10}
